# alpaca-netcode

./: .gitignore  CHANGELOG.md  README.md  SimpleNetCode.cabal  alpaca-netcode.cabal  run3.sh
.github/workflows/: haskell.yml
src/: AppendParallel.hs  Client.hs  ClockSync.hs  Common.hs  FlatOrphans.hs  NetCode.hs  Server.hs
src/Alpaca/: NetCode.hs
src/Alpaca/NetCode/: Advanced.hs  Core.hs
src/Alpaca/NetCode/Core/: Client.hs  ClockSync.hs  Common.hs  Server.hs
src/Alpaca/NetCode/Internal/: Client.hs  ClockSync.hs  Common.hs  Network.hs  Server.hs
test/: Test.hs
