cabal-version:       1.12
name:                alpaca-netcode
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              David Eichmann
maintainer:          davide@well-typed.com
copyright:           2021 David Eichmann
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  other-modules:
      Alpaca.NetCode.Core.Client
    , Alpaca.NetCode.Core.ClockSync
    , Alpaca.NetCode.Core.Common
    , Alpaca.NetCode.Core.Server
  exposed-modules:
      Alpaca.NetCode
    , Alpaca.NetCode.Core
  build-depends:       base
                     , bytestring
                     , containers
                     , flat
                     , network >= 3.1 && < 3.2
                     , network-run
                     , random
                     , stm
                     , time

  hs-source-dirs: src
  ghc-options: -Wall
  ghc-prof-options:
    -fprof-auto
  default-language:    Haskell2010

test-suite test
  Type:                     exitcode-stdio-1.0
  hs-source-dirs: test
  Main-is:                  Test.hs
  Build-depends:            base
                          , alpaca-netcode
                          , containers
                          , random
                          , tasty
                          , tasty-hunit
